feat: 完成 Phase 4 安全強化、E2E 測試、深色模式
Phase 4.1 安全修復:
- Rate Limiting 改用 Caffeine cache 防止記憶體耗盡
- X-Forwarded-For header 安全驗證 (長度限制、IP 格式驗證)
- 分帳 API 新增金額/百分比驗證
- N+1 查詢優化 (Repository 新增批次查詢方法)

Phase 4.2 深色模式:
- Navbar 主題切換按鈕
- FOUC 防護 (localStorage 預載)
- Chart.js 主題響應

Phase 4.3 E2E 測試:
- 重構 auth, trip, expense, document 測試
- 新增 activity, todo, dark-mode 測試
- 89 E2E tests passed (chromium)

Phase 4.4 其他:
- 無障礙 aria-label 修復
- 模板 SpEL null-safety 強化
- 文件更新